--- a/src/main/java/swing/ArabicToRomanView.form
+++ b/src/main/java/swing/ArabicToRomanView.form
@@ -22,7 +22,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="64c37" class="javax.swing.JTextField" binding="textArabicNumber">
+      <component id="64c37" class="javax.swing.JTextField" binding="textArabicNumber" custom-create="true">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
